syntax = "proto2";

package kvraftpb;

enum Op {
    Put = 0;
    Append = 1;
}

message RpcId {
    required string client_name = 1;
    required uint64 seq_id = 2;
}

/// Put or Append
message PutAppendRequest {
    required RpcId info = 1;
    required string key = 2;
    required string value = 3;
    // "Put" or "Append"
    required Op op = 4;
}

message PutAppendReply {
    required bool wrong_leader = 1;
    optional string err = 2;
}

message GetRequest {
    required RpcId info = 1;
    required string key = 2;
}

message GetReply {
    required bool wrong_leader = 1;
    optional string err = 2;
    required string value = 3;
}
